<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentAluno"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlunoFragment">


    <EditText
        android:id="@+id/etEmailAluno"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNomeAluno" />

    <Button
        android:id="@+id/btnInserirAluno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="24dp"
        android:text="@string/inserir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailAluno" />

    <Button
        android:id="@+id/btnExcluirAluno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="28dp"
        android:text="@string/excluir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInserirAluno" />

    <EditText
        android:id="@+id/etRaAluno"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/ra"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloAluno" />

    <Button
        android:id="@+id/btnBuscarAluno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:text="@string/buscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloAluno" />

    <Button
        android:id="@+id/btnListarAluno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="10dp"
        android:text="@string/listar"
        app:layout_constraintEnd_toEndOf="@+id/btnModificarAluno"
        app:layout_constraintTop_toBottomOf="@+id/btnModificarAluno" />

    <Button
        android:id="@+id/btnModificarAluno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/modificar"
        app:layout_constraintEnd_toEndOf="@+id/etEmailAluno"
        app:layout_constraintTop_toBottomOf="@+id/etEmailAluno" />

    <TextView
        android:id="@+id/tvListarAluno"
        android:layout_width="0dp"
        android:layout_height="280dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnExcluirAluno" />

    <TextView
        android:id="@+id/tvTituloAluno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aluno"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNomeAluno"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:hint="@string/nome"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRaAluno" />
</androidx.constraintlayout.widget.ConstraintLayout>