<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LivroFragment">

    <TextView
        android:id="@+id/tvTituloLivro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/livro"
        app:layout_constraintBottom_toTopOf="@+id/etCodigoLivro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etNomeLivro"
        android:layout_width="360dp"
        android:layout_height="48dp"
        android:layout_marginTop="124dp"
        android:ems="10"
        android:hint="@string/nome"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/btnBuscarLivro"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etCodigoLivro"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etQtdPagLivro"
        android:layout_width="360dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="2dp"
        android:ems="10"
        android:hint="@string/qtd_paginas"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/etNomeLivro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNomeLivro" />

    <EditText
        android:id="@+id/etCodigoLivro"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:hint="@string/codigo"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etNomeLivro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnBuscarLivro"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnBuscarLivro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="8dp"
        android:text="@string/buscar"
        app:layout_constraintBottom_toTopOf="@+id/etNomeLivro"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etIsbnLivro"
        android:layout_width="360dp"
        android:layout_height="48dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="17dp"
        android:ems="10"
        android:hint="@string/isbn"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etQtdPagLivro" />

    <EditText
        android:id="@+id/etEdicaoLivro"
        android:layout_width="360dp"
        android:layout_height="48dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="17dp"
        android:ems="10"
        android:hint="@string/edicao"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etIsbnLivro" />

    <Button
        android:id="@+id/btnInserirLivro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/inserir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEdicaoLivro" />

    <Button
        android:id="@+id/btnEcluirLivro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/excluir"
        app:layout_constraintBottom_toTopOf="@+id/tvListarLivro"
        app:layout_constraintStart_toStartOf="@+id/btnInserirLivro"
        app:layout_constraintTop_toBottomOf="@+id/btnInserirLivro"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/btnModificarLivro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="1dp"
        android:text="@string/modificar"
        app:layout_constraintEnd_toEndOf="@+id/etEdicaoLivro"
        app:layout_constraintTop_toBottomOf="@+id/etEdicaoLivro" />

    <Button
        android:id="@+id/btnListarLivro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="3dp"
        android:text="@string/listar"
        app:layout_constraintBottom_toTopOf="@+id/tvListarLivro"
        app:layout_constraintEnd_toEndOf="@+id/btnModificarLivro"
        app:layout_constraintTop_toBottomOf="@+id/btnModificarLivro"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/tvListarLivro"
        android:layout_width="406dp"
        android:layout_height="204dp"
        android:layout_marginTop="96dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInserirLivro" />
</androidx.constraintlayout.widget.ConstraintLayout>