<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AluguelFragment">

    <Spinner
        android:id="@+id/spAlunoAluguel"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="31dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloAluguel" />

    <Spinner
        android:id="@+id/spExemplarAluguel"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="31dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spAlunoAluguel" />

    <TextView
        android:id="@+id/tvTituloAluguel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aluguel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etDataRetiradaAluguel"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="31dp"
        android:ems="10"
        android:hint="@string/data_retirada"
        android:importantForAutofill="no"
        android:inputType="date"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spExemplarAluguel" />

    <EditText
        android:id="@+id/etDataDevolucaoAluguel"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="31dp"
        android:ems="10"
        android:hint="@string/data_devolucao"
        android:importantForAutofill="no"
        android:inputType="date"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDataRetiradaAluguel" />

    <Button
        android:id="@+id/btnInserirAluguel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="44dp"
        android:text="@string/alugar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDataDevolucaoAluguel" />

    <Button
        android:id="@+id/btnExcluirAluguel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="40dp"
        android:text="@string/excluir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInserirAluguel" />

    <Button
        android:id="@+id/btnListarAluguel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/listar"
        app:layout_constraintEnd_toEndOf="@+id/btnModificarAluguel"
        app:layout_constraintStart_toStartOf="@+id/btnModificarAluguel"
        app:layout_constraintTop_toBottomOf="@+id/etDataDevolucaoAluguel" />

    <Button
        android:id="@+id/btnModificarAluguel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="44dp"
        android:text="@string/modificar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnListarAluguel" />

    <TextView
        android:id="@+id/tvListarAluguel"
        android:layout_width="0dp"
        android:layout_height="237dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnModificarAluguel"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>